--- a/src/assets/CardLists.scss
+++ b/src/assets/CardLists.scss
@@ -3,17 +3,22 @@
 	flex-wrap: wrap;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
 	padding-bottom: 50px;
+	background-color: #181818;
+	min-height: 100vh;
 
 	h1 {
 		text-align: center;
 		font-size: 5rem;
+		margin: 20px 0;
+		color: white;
+		-webkit-text-stroke: 3px black;
 	}
 
 	.mainContainer {
 		display: flex;
 		flex-wrap: wrap;
+		width: 90%;
 		max-width: 90%;
 		margin: 0 auto;
 		text-align: center;
