--- a/src/assets/CardLists.scss
+++ b/src/assets/CardLists.scss
@@ -25,4 +25,17 @@
 		justify-content: center;
 		gap: 0rem 3rem;
 	}
+
+	.details {
+		flex-direction: column;
+		align-items: center;
+
+		.goBack {
+			color: white;
+			font-size: 2rem;
+			font-family: 'Marvel';
+			margin: 0;
+			cursor: pointer;
+		}
+	}
 }
