--- a/src/assets/CardLists.scss
+++ b/src/assets/CardLists.scss
@@ -38,4 +38,19 @@
 			cursor: pointer;
 		}
 	}
+
+	.pagination {
+		display: flex;
+		font-size: 2rem;
+		gap: 2rem;
+		align-items: center;
+		color: white;
+		font-family: 'Marvel';
+		-webkit-text-stroke: 0.5px black;
+
+		.prePage,
+		.nextPage {
+			cursor: pointer;
+		}
+	}
 }
